--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,13 +5,8 @@
 html,
 body,
 #root {
-    height: 100%;
     margin: 0;
     padding: 0;
-}
-
-html {
-    overflow-y: scroll;
 }
 
 body {
@@ -21,7 +16,6 @@ body {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow-y: auto;
 }
 
 code {
